<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_Completar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completar"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="39dp" />

    <Button
        android:id="@+id/bt_Modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar" />

    <Button
        android:id="@+id/bt_Eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar" />
    <Button
        android:id="@+id/bt_Enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />


</LinearLayout>